--- a/src/app/public/components/checkout/checkout.component.html
+++ b/src/app/public/components/checkout/checkout.component.html
@@ -14,69 +14,27 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let list of List">
+                            <tr *ngFor="let item of produit">
                                 <td class="shoping__cart__item">
-                                    <img src="assets/img/cart/cart-1.jpg" alt="">
-                                    <h5>CAROTE</h5>
+                                    <img [src]="ImageDirectoryPath+item?.image" alt="">
+                                    <h5>{{item.libelle}}</h5>
                                 </td>
-                                <td class="quantity-box"><input type="number"
-                                    size="4" value="1" min="0" step="1" 
-                                    class="c-input-text qty text">
+                                <td class="quantity-box">
+                                  {{item.qte}}
                                </td>
                                 <td class="shoping__cart__total">
-                                    600FCFA
+                                    {{item.prix}} FCFA
                                 </td>
                                 <td class="shoping__cart__total">
-                                    60.000FCFA
+                                    {{item.prix * item.qte}} FCFA
                                 </td>
                                 <td class="remove-pr">
-                                    <a href="#">
+                                    <button  (click)="deleteItemCard(item.id)">
                                 <i class="fas fa-times"></i>
-                                    </a>
+                                    </button>
                                 </td>
                             </tr>
-                            <tr>
-                                <td class="shoping__cart__item">
-                                    <img src="assets/img/cart/cart-2.jpg" alt="">
-                                    <h5>POMME DE TERRE</h5>
-                                </td>
-                                <td class="quantity-box"><input type="number"
-                                    size="4" value="1" min="0" step="1" 
-                                    class="c-input-text qty text">
-                               </td>
-                                <td class="shoping__cart__total">
-                                    600FCFA
-                                </td>
-                                <td class="shoping__cart__total">
-                                   120.000FCFA
-                                </td>
-                                <td class="remove-pr">
-                                    <a href="#">
-                                <i class="fas fa-times"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="shoping__cart__item">
-                                    <img src="assets/img/cart/cart-3.jpg" alt="">
-                                    <h5>CHou</h5>
-                                </td>
-                                <td class="quantity-box"><input type="number"
-                                    size="4" value="1" min="0" step="1" 
-                                    class="c-input-text qty text">
-                               </td>
-                                <td class="shoping__cart__total">
-                                    600FCFA
-                                </td>
-                                <td class="shoping__cart__total">
-                                    150.000FCFA
-                                </td>
-                                <td class="remove-pr">
-                                    <a href="#">
-                                <i class="fas fa-times"></i>
-                                    </a>
-                                </td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -85,7 +43,12 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="shoping__checkout">
-                    <a href="public/paiement" class="primary-btn">Terminer Votre Achat</a>
+                    <a href="public/paiement" class="btn btn-primary">Terminer Votre Achat</a>
+                </div>
+            </div>
+          <div class="col-lg-6">
+                <div class="shoping__checkout">
+                    <a href="public/checkout" class="btn btn-danger" (click)="deleteCard()">Vider le panier</a>
                 </div>
             </div>
         </div>
