--- a/src/app/public/components/produits/produits.component.html
+++ b/src/app/public/components/produits/produits.component.html
@@ -2,7 +2,7 @@
   <div class="container">
       <div class="row">
           <div class="categories__slider owl-carousel">
-              <div class="col-lg-3">
+              <div class="col-lg-3" >
                   <div class="categories__item set-bg" style="background-image: url(assets/img/categories/cat-1.jpg);">
                       <h5><a href="#">Fresh Fruit</a></h5>
                   </div>
@@ -54,127 +54,21 @@
           </div>
       </div>
       <div class="row featured__filter">
-          <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat">
+          <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat" *ngFor="let produit of produits">
               <div class="featured__item">
-                  <div class="featured__item__pic set-bg" style="background-image: url(assets/img/featured/feature-1.jpg);">
+                  <div class="featured__item__pic set-bg" [ngStyle]="{'background-image':'url(' + ImageDirectoryPath+produit?.image + ')' }">
                       <ul class="featured__item__pic__hover">
-                         
-                          <li><a href="/public/detail-pro"><i class="fa fa-retweet"></i></a></li>
-                          <li><a href="/public/checkout"><i class="fa fa-shopping-cart"></i></a></li>
-                      </ul>
-                  </div>
-                  <div class="featured__item__text">
-                      <h5>CAROTE</h5>
-                      <h5>600FCFA/KG</h5>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fastfood">
-              <div class="featured__item">
-                  <div class="featured__item__pic set-bg"style="background-image: url(assets/img/featured/feature-2.jpg);">
-                      <ul class="featured__item__pic__hover">
-                          <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                          <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                          <li><a href="/public/checkout"><i class="fa fa-shopping-cart"></i></a></li>
-                      </ul>
-                  </div>
-                  <div class="featured__item__text">
-                      <h5>AUBERGINE</h5>
-                      <h5>500FCFA/KG</h5>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fastfood">
-            <div class="featured__item">
-                <div class="featured__item__pic set-bg"style="background-image: url(assets/img/featured/feature-2.1.jpg);">
-                    <ul class="featured__item__pic__hover">
-                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                        <li><a href="/public/checkout"></a></li>
-                    </ul>
-                </div>
-                <div class="featured__item__text">
-                    <h5>TOMATE</h5>
-                    <h5>500FCFA/KG</h5>
-                </div>
-            </div>
-        </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mix vegetables fresh-meat">
-              <div class="featured__item">
-                  <div class="featured__item__pic set-bg" style="background-image: url(assets/img/featured/feature-3.jpg);">
-                      <ul class="featured__item__pic__hover">
-                          <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                          <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                          <li><a href="/public/checkout"><i class="fa fa-shopping-cart"></i></a></li>
-                      </ul>
-                  </div>
-                  <div class="featured__item__text">
-                     <h5>Pomme de terre</h5>
-                      <h5>600FCFA/KG</h5>
 
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mix fastfood oranges">
-              <div class="featured__item">
-                  <div class="featured__item__pic set-bg" style="background-image: url(assets/img/featured/feature-4.jpg);">
-                      <ul class="featured__item__pic__hover">
-                          <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                          <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                          <li><a href="/public/checkout"><i class="fa fa-shopping-cart"></i></a></li>
+                          <li><a href="/public/detail/{{produit.id}}"><i class="fa fa-retweet"></i></a></li>
+                          <li><a href="/public/produits" (click)="add(produit)"><i class="fa fa-shopping-cart"></i></a></li>
                       </ul>
                   </div>
                   <div class="featured__item__text">
-                      <h5>Gombo</h5>
-                      <h5>500FCFA/KG</h5>
+                      <h5>{{produit?.libelle}}</h5>
+                      <h5>{{produit?.prix}}FCFA/KG</h5>
                   </div>
               </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mix fresh-meat vegetables">
-              <div class="featured__item">
-                  <div class="featured__item__pic set-bg"style="background-image: url(assets/img/featured/feature-5.jpg);">
-                      <ul class="featured__item__pic__hover">
-                          <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                          <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                          <li><a href="/public/checkout"><i class="fa fa-shopping-cart"></i></a></li>
-                      </ul>
-                  </div>
-                  <div class="featured__item__text">
-                      <h5>OGNIONS</h5>
-                      <h5>500FCFA/KG</h5>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fastfood">
-              <div class="featured__item">
-                  <div class="featured__item__pic set-bg" style="background-image: url(assets/img/featured/feature-6.jpg);">
-                      <ul class="featured__item__pic__hover">
-                          <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                          <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                          <li><a href="/public/checkout"><i class="fa fa-shopping-cart"></i></a></li>
-                      </ul>
-                  </div>
-                  <div class="featured__item__text">  
-                    <h5>Chou</h5>
-                    <h5>600FCFA/KG</h5>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fastfood">
-            <div class="featured__item">
-                <div class="featured__item__pic set-bg" style="background-image: url(assets/img/featured/feature-7.jpg);">
-                    <ul class="featured__item__pic__hover">
-                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                        <li><a href="/public/checkout"><i class="fa fa-shopping-cart"></i></a></li>
-                    </ul>
-                </div>
-                <div class="featured__item__text">
-                    <h5>Gingembre</h5>
-                    <h5>600FCFA/KG</h5>
-                </div>
-            </div>
-        </div>
       </div>
   </div>
 </section>
