--- a/src/app/admin/components/commande/commande.component.html
+++ b/src/app/admin/components/commande/commande.component.html
@@ -6,45 +6,40 @@
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
-            <li class="breadcrumb-item"><a href="#">Categorie</a></li>
+            <li class="breadcrumb-item"><a href="#">Commandes</a></li>
           </ol>
         </div>
       </div>
     </div><!-- /.container-fluid -->
   </section>
   <section class="shoping-cart spad">
-    <div class="container">
   <div class="card">
-    <div class="card-body p-0">
+    <div class="card-body pl-0">
       <table class="table">
         <thead>
           <tr>
-            <th style="width: 10px">#</th>
             <th>Date Commande</th>
-            <th>Libelle</th>
-            <th>Quantite</th>
             <th>TOTAL</th>
             <th>Ville</th>
+            <th>ETAT</th>
             <th>Acheteur</th>
-            <th>Vendeur</th>
             <th>Action</th>
           </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>8-09-2022</td>
-                <td>Pomme de terre</td>
-                <td>500kg</td>
-                <td>500FCFA</td>
-                <td>Dakar</td>
-                <td>NgorSeck</td>
-                <td>Mamadou Saliou Diallo</td>
+            <tr *ngFor="let list of List">
+                <td>{{list.date | date}}</td>
+                <td>{{list.tel}}</td>
+                <td>{{list.total}}</td>
+                <td>{{list.adresse}}</td>
+                <td *ngIf="list.status==0">En attente</td>
+                <td *ngIf="list.status==1">Livré</td>
+                <td>{{list.user.prenom}}</td>
                 <td>
                     <div>
-                        <button type="button" class="btn btn-warning">Edit</button>
+                        <button type="button" class="btn btn-warning">detail</button>
 
-                        <button type="button" class="btn btn-danger">Delete</button>
+                        <button type="button" class="btn btn-danger">livrer</button>
                     </div>
                 </td>
             </tr>
@@ -53,3 +48,4 @@
     </div>
     <!-- /.card-body -->
   </div>
+  </section>
