--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -28,7 +28,7 @@
           <div class="col-lg-3">
               <div class="header__cart">
                   <ul>
-                      <li><a href="public/checkout"><i class="fa fa-shopping-bag"></i><span>3</span></a></li>
+                      <li><a href="public/checkout"><i class="fa fa-shopping-bag"></i><span>{{number}}</span></a></li>
                   </ul>
               </div>
           </div>
