--- a/src/app/admin/components/commande/commande.component.html
+++ b/src/app/admin/components/commande/commande.component.html
@@ -39,7 +39,7 @@
                     <div>
                         <button type="button" class="btn btn-warning">detail</button>
 
-                        <button type="button" class="btn btn-danger">livrer</button>
+                        <button type="button" class="btn btn-danger" (click)="changeStatus(list.id)">livrer</button>
                     </div>
                 </td>
             </tr>
