--- a/src/app/public/components/paiement/paiement.component.html
+++ b/src/app/public/components/paiement/paiement.component.html
@@ -109,6 +109,7 @@
                 </div>
                 <button type="submit" (click)="addCommande()" class="btn btn-success">VALIDER VOTRE ACHAT</button>
                 <hr class="mb-1">
+               <div class="alert-primary" *ngIf="isMessage">{{message}}</div>
         </div>
       </form>
 
